--- a/bcs_testcase/block_manage/templates/index.html
+++ b/bcs_testcase/block_manage/templates/index.html
@@ -1,10 +1,31 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>BCS TestCase</title>
-</head>
-<body>
+{% extends "base.html" %}
 
-</body>
-</html>
+{% block title %}
+    Transactions {{block.super}}
+{% endblock %}
+
+{% block content %}
+
+<div style="text-align: center;">
+    <span>
+    <form action="/new_tx/" method="post">
+        {% csrf_token %}
+        <button type="submit" class="btn btn-success">Create new transaction</button>
+    </form>
+    </span>
+
+    <div>
+        Transactions:
+        <span>
+        <form action="/update_txs/" method="post">
+            {% csrf_token %}
+            <button type="submit" class="btn btn-success">Check for new transactions</button>
+        </form>
+        </span>
+    {% for tx in transactions %}
+        <p>tx-id: <a href="/tx/{{ tx.tx_id }}">{{ tx.tx_id }}</a></p>
+    {% endfor %}
+    </div>
+</div>
+
+{% endblock %}
